Bug 799544 - block the old Mesa 'Software Rasterizer' -- recommend LLVMpipe instead - r=joe